--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-</body>
+ <header>
+<h1>Hello World </h1>
+<p>Que bom ter ver por qui,Fulano</p>
+ </header>
+
+<section>
+<h2>HTML</h2>
+<P>HyperText Markup Language” (Linguagem de Marcação de Hipertexto) estrutura sua página web</P>
+
+  <H2>CSS</H2>
+  <P>Cascading Style Sheets(Folhas de Estilo em Cascata), cria estilos padronizados na sua página web</P>
+<img src="imagem/Olá Mundo.png" alt="uma imagem geometrica com figura de um planeta"
+</section>
+
+
+
+<footer>
+<P>Uma pagina desenvolvida por Alura</P>
+
+</footer>
+
+<body>
 </html>
+        
+
+
